--- a/Terms and condition.html
+++ b/Terms and condition.html
@@ -17,7 +17,7 @@
 <p><b>By residing or visiting [Barangay Name], you agree to adhere to these terms and conditions. Failure to comply may result in appropriate actions or sanctions by barangay authorities.</b></p>
 <p><b>Thank you for being a responsible member of our community!</b></p>
 
-<p>Go back to Login?<a href="file:///C:/Users/kate/Downloads/INDEX.html">Click</a></p> 
+<p>Go back to Login?<a href="../Iot-Baranggay/INDEX.html">Click</a></p> 
 
 </body>
 </html>
