--- a/residency.html
+++ b/residency.html
@@ -10,7 +10,7 @@
         body {
             width: 100%;
             background-color: #f0f0f0; 
-            background-image: url('bg4.jpg'); /* Update background image URL */
+            background-image: url('../Iot-Baranggay/bg4.jpg'); /* Update background image URL */
             background-size: cover;
             background-position: center;
             height: 100vh;
