--- a/INDEX.html
+++ b/INDEX.html
@@ -80,14 +80,14 @@
 	<input type="password" placeholder="Re-password">
 	<p>
 	By creating an account you agree to our
-	<a href="file:///C:/Users/kate/Desktop/Terms%20and%20condition.html">"Terms and Privacy"</a>
+	<a href="../Iot-Baranggay/Terms and condition.html">"Terms and Privacy"</a>
 
 	</p>
 	
 	<button class="registerbtn">Sign up</button>
 	
 	<div class="login">
-	<p>Already have account?<a href="file:///C:/Users/kate/Desktop/IOT%20BARANGAY/LOGIN-INVENTORY.html">Login</a></p> 
+	<p>Already have account?<a href="../Iot-Baranggay/LOGIN-INVENTORY.html">Login</a></p> 
 
 	</form>
 	</div>
