--- a/LOGIN-INVENTORY.html
+++ b/LOGIN-INVENTORY.html
@@ -8,7 +8,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
-            background-image: url('bg3.jpg'); 
+            background-image: url('../Iot-Baranggay/bg3.jpg'); 
             background-size: cover; 
             background-position: center; 
             background-repeat: no-repeat; 
@@ -97,10 +97,10 @@
         <p>Forget?<a href="#">Password</a></p>
     </label>
     <label>
-        <p>No account?<a href="INDEX.html">Signup</a>
+        <p>No account?<a href="../Iot-Baranggay/INDEX.html">Signup</a>
     </label>
     <label>
-        <p>Back Home Page<a href="file:///C:/Users/kate/Desktop/IOT%20BARANGAY/welcome%20page.html">Click</a>
+        <p>Back Home Page<a href="../Iot-Baranggay/welcome page.html">Click</a>
     </label>
 
 </body>
