--- a/welcome page.html
+++ b/welcome page.html
@@ -8,7 +8,7 @@
         body {
             width: 100%;
             background-color: #f0f0f0; 
-            background-image: url('bg1.jpg');
+            background-image: url('../Iot-Baranggay/bg1.jpg');
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -43,7 +43,7 @@
 
 <h1>Welcome to the Online Appointment And Business Requirements Platform</h1>
 
-<a href="file:///C:/Users/kate/Desktop/IOT%20BARANGAY/LOGIN-INVENTORY.html" class="btn"><i class="fa fa-proceed-to-next-page"></i> Proceed to next Page</a>
+<a href="../Iot-Baranggay/LOGIN-INVENTORY.html" class="btn"><i class="fa fa-proceed-to-next-page"></i> Proceed to next Page</a>
 
 </body>
 </html>
